enhance: replace missing colors with css variables. fix #6319

--- a/src/components/form/form.less
+++ b/src/components/form/form.less
@@ -29,5 +29,5 @@
 
 .adm-form-list-operation {
   text-align: center;
-  color: #1677ff;
+  color: var(--adm-color-primary);
 }
